[package]
name = "syscon-rs"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "A driver for syscon poweroff, and reboot in rust"
repository = "https://github.com/archaic-archea/syscon-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fdt = "0.1.4"
log = "0.4"